docs(笔记): 将环境及工具.md中有关前端信息移动到前端项目的笔记中

--- a/笔记/环境及工具.md
+++ b/笔记/环境及工具.md
@@ -10,20 +10,9 @@
 
 ## IDE
 - IDEA(Java)
-- VS Code(Vue)
+- DataGrip(Mysql)
 
 ## 插件
 ### IDEA插件
 - lombok
 - MybatisX
-
-### VSCode插件
-- Auto Close Tag(用于自动开闭标签)
-- Auto Rename Tag
-- ESLint(ES语法检查)
-- HTML CSS Support
-- HTML Snippets
-- JavaScript (ES6) code snippets
-- Live Server
-- open in browser
-- Vetur
