style(*): 修改各个模块的pom文件，将依赖统一由父模块mall-parent进行管理。并引入spring-cloud-alibaba依赖
1. 修改各个模块的pom文件，将依赖统一由父模块mall-parent进行管理
2. 引入spring-cloud-alibaba依赖
3. 编写架构设计所用技术

--- a/笔记/架构/架构设计.md
+++ b/笔记/架构/架构设计.md
@@ -1,5 +1,14 @@
 # 架构设计
-
+## 技术选型
+结合SpringCloudAlibaba的技术搭配方案
+- SpringCloud Alibaba-Nacos: 注册中心(服务发现/注册)
+- SpringCloud Alibaba-Nacos: 配置中心(动态配置管理)
+- SpringCloud-OpenFeign: 声明式HTTP客户端(调用远程服务)
+- SpringCloud-Gateway: API网关(webflux编程模式)
+- SpringCloud-Sleuth: 调用链监控
+- SpringCloud Alibaba-Sentinel:服务容错(限流、降级、熔断)
+- SpringCloud Alibaba-Seata:原Fescar，即分布式事务解决方案
+- 
 ## 后台管理系统
 ### 优惠券服务(Coupon)
 mall-coupon
